completed tests 69% coverage