@@ -18,7 +18,6 @@ java {
     }
 }
 
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -27,7 +26,8 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-core:5.5.0'
+    testImplementation "net.bytebuddy:byte-buddy:1.14.0"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
     compileOnly 'org.projectlombok:lombok'
@@ -44,6 +44,7 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
+                    "**/console/**",
                     "**/model/**",
                     "**/config/**"
             ])
@@ -54,5 +55,6 @@ jacocoTestReport {
 }
 
 test {
+    jvmArgs "-Dnet.bytebuddy.experimental=true"
     useJUnitPlatform()
 }
